<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/IndexFragment">

    <fragment
        android:id="@+id/IndexFragment"
        android:name="com.zx_tole.guyverwiki.ui.fragment.IndexFragment"
        android:label="@string/menu_fragment_label"
        tools:layout="@layout/fragment_index">

        <action
            android:id="@+id/action_IndexFragment_to_ZoalordsFragment"
            app:destination="@id/ZoalordsFragment" />

        <action
            android:id="@+id/action_IndexFragment_to_ZoanoidsFragment"
            app:destination="@id/ZoanoidsFragment" />

        <action
            android:id="@+id/action_IndexFragment_to_GuyversFragment"
            app:destination="@id/GuyversFragment" />

        <action
            android:id="@+id/action_IndexFragment_to_CharactersFragment"
            app:destination="@id/CharactersFragment" />
    </fragment>
    <fragment
        android:id="@+id/ZoalordsFragment"
        android:name="com.zx_tole.guyverwiki.ui.fragment.ZoalordsFragment"
        android:label="@string/zoalords_fragment_label"
        tools:layout="@layout/fragment_zoalords">

        <action
            android:id="@+id/action_ZoalordsFragment_to_IndexFragment"
            app:destination="@id/IndexFragment" />
    </fragment>

    <fragment
        android:id="@+id/ZoanoidsFragment"
        android:name="com.zx_tole.guyverwiki.ui.fragment.ZoanoidsFragment"
        android:label="@string/menu_item_zoanoids"
        tools:layout="@layout/fragment_zoanoids">

        <action
            android:id="@+id/action_ZoanoidsFragment_to_IndexFragment"
            app:destination="@id/IndexFragment" />
    </fragment>

    <fragment
        android:id="@+id/GuyversFragment"
        android:name="com.zx_tole.guyverwiki.ui.fragment.GuyversFragment"
        android:label="@string/menu_item_guyvers"
        tools:layout="@layout/fragment_zoanoids">

        <action
            android:id="@+id/action_GuyversFragment_to_IndexFragment"
            app:destination="@id/IndexFragment" />
    </fragment>

    <fragment
        android:id="@+id/CharactersFragment"
        android:name="com.zx_tole.guyverwiki.ui.fragment.CharactersFragment"
        android:label="@string/menu_item_characters"
        tools:layout="@layout/fragment_zoanoids">

        <action
            android:id="@+id/action_CharactersFragment_to_IndexFragment"
            app:destination="@id/IndexFragment" />
    </fragment>

    <fragment
        android:id="@+id/CharacterFragment"
        android:name="com.zx_tole.guyverwiki.ui.fragment.CharacterFragment"
        android:label="@string/menu_item_character"
        tools:layout="@layout/fragment_zoanoids">
    </fragment>
</navigation>